--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "textfit": "^2.4.0"
   },
   "devDependencies": {
-    "rollup": "^4.17.2",
     "@eslint/js": "^9.2.0",
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-node-resolve": "^15.2.3",
@@ -19,6 +18,7 @@
     "eslint": "^9.2.0",
     "from": "^0.1.7",
     "globals": "^15.1.0",
-    "import": "^0.0.6"
+    "import": "^0.0.6",
+    "rollup": "^4.17.2"
   }
 }
